completed version 1.0, need to add pub sub

--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,17 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Development</title>
+    <title>Image slider</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
   </head>
-  <body></body>
+  <body>
+    <div class="carousal-container">
+      <img alt="image for carousal" class="carousal-img" />
+      <div class="carousal-nav">
+        <img id="leftArrow" class="arrow" />
+        <div class="carousal-icon-container"></div>
+        <img id="rightArrow" class="arrow" />
+      </div>
+    </div>
+  </body>
 </html>
